--- a/src/pages/products/products.scss
+++ b/src/pages/products/products.scss
@@ -1,3 +1,14 @@
 .products {
-  background-color: tomato;
+  
+  .info{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+
+    button{
+      padding: 5px;
+      cursor: pointer;
+    }
+  }
 }
