--- a/src/components/chartBox/chartBox.scss
+++ b/src/components/chartBox/chartBox.scss
@@ -1,6 +1,20 @@
+@import "../../styles/responsive.scss";
+
 .chartBox {
   display: flex;
   height: 100%;
+
+  @include xl {
+    flex-direction: column;
+  }
+
+  @include lg {
+    flex-direction: row;
+  }
+
+  @include sm {
+    flex-direction: column;
+  }
 
   .boxInfo {
     flex: 3;
@@ -8,10 +22,32 @@
     flex-direction: column;
     justify-content: space-between;
 
+    @include xl {
+    gap: 20px;
+  }
+
+  @include lg {
+    gap: 20px;
+  }
+
+    @include sm {
+      gap: 20px;
+    }
+
     .title {
       display: flex;
       align-items: center;
       gap: 10px;
+
+      @include xxl {
+        font-size: 14px;
+      }
+    }
+
+    h1 {
+      @include xxl {
+        font-size: 20px;
+      }
     }
   }
 
@@ -34,10 +70,18 @@
       .percentage {
         font-weight: bold;
         font-size: 20px;
+
+        @include xxl {
+          font-size: 14px;
+        }
       }
 
       .duration {
         font-size: 14px;
+
+        @include xxl {
+          font-size: 12px;
+        }
       }
     }
   }
