--- a/src/components/topBox/topBox.scss
+++ b/src/components/topBox/topBox.scss
@@ -1,7 +1,13 @@
+@import "../../styles/responsive.scss";
+
 .topBox {
 
   h1 {
     margin-bottom: 20px;
+
+    @include xxl {
+      font-size: 24px;
+    }
   }
 
   .list {
@@ -21,6 +27,14 @@
           height: 40px;
           border-radius: 50%;
           object-fit: cover;
+
+          @include xxl {
+            display: none;
+          }
+
+          @include lg {
+            display: block;
+          }
         }
 
         .userTexts {
@@ -35,6 +49,14 @@
 
           .email {
             font-size: 10px;
+
+            @include xxl {
+              display: none;
+            }
+
+            @include lg {
+              display: block;
+            }
           }
         }
       }
