--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './responsive.scss';
 
 * {
   margin: 0;
@@ -21,15 +22,21 @@ a {
 .container {
   display: flex;
   width: 100%;
+  height: 100%;
 }
 
 .menuContainer {
-  width: 15%;
+  width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
+
+  @include lg {
+    width: max-content;
+  }
 }
 
 .contentContainer {
   padding: 5px 20px;
-  width: 85%;
+  width: 80%;
+  flex: 1;
 }
